deploy/order/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: order
    weight: 100
  wildcardPolicy: None
